@@ -116,7 +116,7 @@ public class profile
       if ("pings".equals(args[0])) {
          int count = PING_INNER*PING_OUTER;
          System.out.print("Sending "+count+" pings...");
-         Peer p = (Peer) conn.getRemoteObject("org.freedesktop.DBus.java.profiler", "/Profiler", Peer.class);
+         Peer p = conn.getRemoteObject("org.freedesktop.DBus.java.profiler", "/Profiler", Peer.class);
          Log l = new Log(count);
          long t = System.currentTimeMillis();
          for (int i = 0; i < PING_OUTER; i++) {
@@ -136,7 +136,7 @@ public class profile
          int count = ARRAY_INNER*ARRAY_OUTER;
          System.out.print("Sending array of "+ARRAY_LENGTH+" ints "+count+" times.");
          conn.exportObject("/Profiler", new ProfilerInstance());
-         Profiler p = (Profiler) conn.getRemoteObject("org.freedesktop.DBus.java.profiler", "/Profiler", Profiler.class);
+         Profiler p = conn.getRemoteObject("org.freedesktop.DBus.java.profiler", "/Profiler", Profiler.class);
          int[] v = new int[ARRAY_LENGTH];
          Random r = new Random();
          for (int i = 0; i < ARRAY_LENGTH; i++) v[i] = r.nextInt();
@@ -159,7 +159,7 @@ public class profile
          int count = MAP_INNER*MAP_OUTER;
          System.out.print("Sending map of "+MAP_LENGTH+" string=>strings "+count+" times.");
          conn.exportObject("/Profiler", new ProfilerInstance());
-         Profiler p = (Profiler) conn.getRemoteObject("org.freedesktop.DBus.java.profiler", "/Profiler", Profiler.class);
+         Profiler p = conn.getRemoteObject("org.freedesktop.DBus.java.profiler", "/Profiler", Profiler.class);
          HashMap<String,String> m = new HashMap<String,String>();
          for (int i = 0; i < MAP_LENGTH; i++) 
             m.put(""+i, "hello");
@@ -182,7 +182,7 @@ public class profile
          int count = LIST_OUTER*LIST_INNER;
          System.out.print("Sending list of "+LIST_LENGTH+" strings "+count+" times.");
          conn.exportObject("/Profiler", new ProfilerInstance());
-         Profiler p = (Profiler) conn.getRemoteObject("org.freedesktop.DBus.java.profiler", "/Profiler", Profiler.class);
+         Profiler p = conn.getRemoteObject("org.freedesktop.DBus.java.profiler", "/Profiler", Profiler.class);
          Vector<String> v = new Vector<String>();
          for (int i = 0; i < LIST_LENGTH; i++) 
             v.add("hello "+i);
@@ -205,7 +205,7 @@ public class profile
          int count = STRUCT_OUTER*STRUCT_INNER;
          System.out.print("Sending a struct "+count+" times.");
          conn.exportObject("/Profiler", new ProfilerInstance());
-         Profiler p = (Profiler) conn.getRemoteObject("org.freedesktop.DBus.java.profiler", "/Profiler", Profiler.class);
+         Profiler p = conn.getRemoteObject("org.freedesktop.DBus.java.profiler", "/Profiler", Profiler.class);
          ProfileStruct ps = new ProfileStruct("hello", new UInt32(18), 500L);
          Log l = new Log(count);
          long t = System.currentTimeMillis();
@@ -226,7 +226,7 @@ public class profile
          int count = INTROSPECTION_OUTER*INTROSPECTION_INNER;
          System.out.print("Recieving introspection data "+count+" times.");
          conn.exportObject("/Profiler", new ProfilerInstance());
-         Introspectable is = (Introspectable) conn.getRemoteObject("org.freedesktop.DBus.java.profiler", "/Profiler", Introspectable.class);
+         Introspectable is = conn.getRemoteObject("org.freedesktop.DBus.java.profiler", "/Profiler", Introspectable.class);
          Log l = new Log(count);
          long t = System.currentTimeMillis();
          String s = null;
@@ -247,7 +247,7 @@ public class profile
       } else if ("bytes".equals(args[0])) {
          System.out.print("Sending "+BYTES+" bytes");
          conn.exportObject("/Profiler", new ProfilerInstance());
-         Profiler p = (Profiler) conn.getRemoteObject("org.freedesktop.DBus.java.profiler", "/Profiler", Profiler.class);
+         Profiler p = conn.getRemoteObject("org.freedesktop.DBus.java.profiler", "/Profiler", Profiler.class);
          byte[] bs = new byte[BYTES];
          for (int i = 0; i < BYTES; i++) 
             bs[i] = (byte) i;            
@@ -256,8 +256,8 @@ public class profile
          System.out.println(" done in "+(System.currentTimeMillis()-t)+"ms.");
       } else if ("rate".equals(args[0])) {
          conn.exportObject("/Profiler", new ProfilerInstance());
-         Profiler p = (Profiler) conn.getRemoteObject("org.freedesktop.DBus.java.profiler", "/Profiler",         Profiler.class);
-         Peer peer = (Peer) conn.getRemoteObject("org.freedesktop.DBus.java.profiler", "/Profiler", Peer.class);
+         Profiler p = conn.getRemoteObject("org.freedesktop.DBus.java.profiler", "/Profiler",         Profiler.class);
+         Peer peer = conn.getRemoteObject("org.freedesktop.DBus.java.profiler", "/Profiler", Peer.class);
          long start = System.currentTimeMillis();
          int count = 0;
          do {
