@@ -28,7 +28,7 @@ public class two_part_test_client
       System.out.println("get conn");
       DBusConnection conn = DBusConnection.getConnection(DBusConnection.SESSION);
       System.out.println("get remote");
-      TwoPartInterface remote = (TwoPartInterface) conn.getRemoteObject("org.freedesktop.dbus.test.two_part_server", "/", TwoPartInterface.class);
+      TwoPartInterface remote = conn.getRemoteObject("org.freedesktop.dbus.test.two_part_server", "/", TwoPartInterface.class);
       System.out.println("get object");
       TwoPartObject o = remote.getNew();
       System.out.println("get name");
